# Mini-Search-Engine

./: .gitignore  CMakeLists.txt  README.md  sample.txt
include/: document.h  indexer.h  search_engine.h
src/: document.cpp  indexer.cpp  main.cpp  search_engine.cpp
